Fix; 인터셉트 NPE 체크, 시큐리티 설정 변경